--- a/kubespray_workspace/kubespray-2.23.1/contrib/terraform/aws/credentials.tfvars.example
+++ b/kubespray_workspace/kubespray-2.23.1/contrib/terraform/aws/credentials.tfvars.example
@@ -1,8 +1,8 @@
 #AWS Access Key
-AWS_ACCESS_KEY_ID = "AKIA2TZH53T4TBBEWXKS"
+AWS_ACCESS_KEY_ID = ""
 #AWS Secret Key
-AWS_SECRET_ACCESS_KEY = "BqPILTyNDzgtz3BdfvnzercEOkWCE2K2rHyD2haz"
+AWS_SECRET_ACCESS_KEY = ""
 #EC2 SSH Key Name
 AWS_SSH_KEY_NAME = "ansible-k8s-deployer"
 #AWS Region
-AWS_DEFAULT_REGION = "us-east-2"
+AWS_DEFAULT_REGION = ""
